# 2025_master_thesis_python_leopold_bodamer

./: .gitattributes  .gitignore  README.md  dev-requirements.txt  environment.yml  pyproject.toml  requirements.txt
.github/instructions/: latex-use.md  python-code.md
.tmp_mplconfig/: fontlist-v390.json
notebooks/: config_input_to_simulation_check.ipynb  test_AtomicSystem.ipynb  test_Slurm_ressources.ipynb  test_TeX_plots.ipynb  test_analytical.ipynb  test_baths.ipynb  test_file_io_naming.ipynb  test_inhomogenity.ipynb  test_phase_cycle_component.ipynb  test_phase_cycling.nb  test_pulses.ipynb  test_redfield_tensor.ipynb  test_spectroscopy.ipynb  test_system_N_atoms.ipynb
plotstyle/: pyproject.toml  test_TeX_plots.ipynb
plotstyle/plotstyle/: __init__.py  constants.py  style.py
qspectro2d/: pyproject.toml
qspectro2d/qspectro2d/config/: create_sim_obj.py  default_simulation_params.py
qspectro2d/qspectro2d/core/atomic_system/: __init__.py  system_class.py
qspectro2d/qspectro2d/core/bath_system/: __init__.py  bath_fcts.py
qspectro2d/qspectro2d/core/laser_system/: laser_class.py
qspectro2d/qspectro2d/core/simulation/: sim_config.py  simulation_class.py
qspectro2d/qspectro2d/spectroscopy/: __init__.py  one_d_field.py  polarization.py  post_processing.py  solver_check.py
qspectro2d/qspectro2d/utils/: __init__.py  constants.py  data_io.py  file_naming.py  rwa_utils.py
qspectro2d/qspectro2d/visualization/: __init__.py  plotting.py
scripts/: avg_inhomogenity.py  calc_datas.py  hpc_batch_dispatch.py  hpc_calc_datas.py  hpc_dispatch.py  hpc_dispatch_generalized.py  hpc_plot_datas.py  plot_datas.py  plot_frequencies_yaml.py  post_process_datas.py  process_datas.py  run_batch.py  run_generalized_batch.py  stack_inhomogenity.py  stack_times.py  sweep_params.py
scripts/common/: job_metadata_relocation.py  plot_settings.py  retry_queue.py  sweeping.py  workflow.py
scripts/hpc/: calc_dispatcher.py  dispatch_phase_retry.py  plot_dispatcher.py  run_batch.py  run_retry_batch.py  sweep_dispatch.py  sweep_dispatcher.py
scripts/local/: analyze_dimer_diagonal_realpart.py  analyze_dimer_fourpeak_realpart.py  analyze_dimer_secular_cutoff.py  analyze_rephasing_nonrephasing_intensity.py  calc_datas.py  debug_lindblad_2d_combo.py  extract_dimer_linewidths.py  fit_trimer_bath_like_dimer.py  plot_datas.py  plot_frequencies_yaml.py  plot_solver_alignment_1d.py  process_datas.py  relocate_job_metadata.py  sweep_params.py
scripts/simulation_configs/: _dimer_coupled.yaml  _monomer.yaml  _test.yaml  dimer_coupled.yaml  dimer_uncoupled.yaml  monomer.yaml  template.yaml
src/thesis_paths/: __init__.py
thesis_paths/: __init__.py
tmp/proteus_validation/: dimer_fig4_T000_paper_eqs_n20.yaml
