[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis_paths"
version = "0.1.0"
description = "contain the paths of the project"
authors = [{name="Leopold Bodamer"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib", 
  "scipy",
  "pyyaml",
]

[project.urls]
Repository = "https://github.com/LBPhysics/thesis_python"
