[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2025-master-thesis-python-leopold-bodamer"
version = "0.1.0"
description = "Scripts, helpers, and local packages for the 2025 master thesis pipeline."
authors = [{name = "Leopold Bodamer"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "pyyaml",
]
keywords = ["spectroscopy", "quantum", "thesis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["thesis_paths"]

