[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotstyle"
version = "0.1.0"
description = "LaTeX-compatible matplotlib plotting styles for the thesis"
requires-python = ">=3.11"
authors = [
  {name = "Leopold Bodamer"}
]

[project.urls]
Repository = "https://github.com/LBPhysics/thesis_python"

[tool.setuptools.packages.find]
include = ["plotstyle", "plotstyle.*"]
namespaces = false


