[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qspectro2d"
version = "0.1.0"
description = "Quantum 1D/2D electronic spectroscopy simulations for the thesis"
requires-python = ">=3.11"
authors = [
  {name = "Leopold Bodamer"}
]

[project.urls]
Repository = "https://github.com/LBPhysics/thesis_python"

[tool.setuptools.packages.find]
include = ["qspectro2d", "qspectro2d.*"]
namespaces = false


